MIDIStatus/MIDIStatus.h


typedef struct tagMIDIPart {
	void* m_pParent;
	long m_lPartMode;             
	long m_lOmniMonoPolyMode;     
	long m_lChannelFineTuning;    
	long m_lChannelCoarseTuning;  
	long m_lPitchBendSensitivity; 
	long m_lModulationDepthRange; 
	long m_lReceiveChannel;       
	long m_lVelocitySenseDepth;   
	long m_lVelocitySenseOffset;  
	long m_lKeyboardRangeLow;     
	long m_lKeyboardRangeHigh;    
	long m_lAssignableControler1Num; 
	long m_lAssignableControler2Num; 
	long m_lReserved1;            
	long m_lReserved2;            
	long m_lScaleOctaveTuning[12]; 
	unsigned char m_cModulationDest[16];           
	unsigned char m_cPitchBendDest[16];            
	unsigned char m_cChannelAfterTouchDest[16];    
	unsigned char m_cKeyAfterTouchDest[16];        
	unsigned char m_cAssignableControler1Dest[16]; 
	unsigned char m_cAssignableControler2Dest[16]; 
	unsigned char m_cNote[128];          
	unsigned char m_cNoteKeep[128];      
	unsigned char m_cKeyAfterTouch[128]; 
	unsigned char m_cControlChange[128]; 
	long m_lProgramChange;        
	long m_lChannelAfterTouch;    
	long m_lPitchBend;            
	long m_lUser1;
	long m_lUser2;
	long m_lUser3;
	long m_lUserFlag;
#ifdef MIDISTATUS_RECORDNRPN
	unsigned char m_cNRPNMSB[128][128];
	unsigned char m_cNRPNLSB[128][128];
#endif
#ifdef MIDISTATUS_RECORDRPN
	unsigned char m_cRPNMSB[128][128];
	unsigned char m_cRPNLSB[128][128];
#endif
} MIDIPart;
typedef struct tagMIDIDrumSetup {
	void* m_pParent;
	unsigned char m_cDrumCutoffFrequency[128]; 
	unsigned char m_cDrumResonance[128];       
	unsigned char m_cDrumAttackTime[128];      
	unsigned char m_cDrumDecay1Time[128];      
	unsigned char m_cDrumDecay2Time[128];      
	unsigned char m_cDrumPitchCoarse[128];     
	unsigned char m_cDrumPitchFine[128];       
	unsigned char m_cDrumVolume[128];          
	unsigned char m_cDrumPan[128];             
	unsigned char m_cDrumReverb[128];          
	unsigned char m_cDrumChorus[128];          
	unsigned char m_cDrumDelay[128];           
	long m_lUser1;
	long m_lUser2;
	long m_lUser3;
	long m_lUserFlag;
} MIDIDrumSetup;
typedef struct tagMIDIStatus {
	long m_lModuleMode;           
	long m_lMasterFineTuning;     
	long m_lMasterCoarseTuning;   
	long m_lMasterBalance;        
	long m_lMasterVolume;         
	long m_lMasterPan;            
	long m_lMasterReverb[32];     
	long m_lMasterChorus[32];     
	long m_lMasterDelay[32];      
	long m_lMasterEqualizer[32];  
	long m_lMasterInsertion[32];  
	long m_lNumMIDIPart;          
	long m_lNumMIDIDrumSetup;     
	MIDIPart* m_pMIDIPart[MIDISTATUS_MAXMIDIPART];
	MIDIDrumSetup* m_pMIDIDrumSetup[MIDISTATUS_MAXMIDIDRUMSETUP];
	long m_lUser1;
	long m_lUser2;
	long m_lUser3;
	long m_lUserFlag;
	long m_lRunningStatus;
} MIDIStatus;
long __stdcall MIDIDrumSetup_GetDrumResonance (MIDIDrumSetup* pMIDIDrumSetup, long lKey);
long __stdcall MIDIDrumSetup_GetDrumResonanceEx (MIDIDrumSetup* pMIDIDrumSetup, unsigned char* pBuf, long lLen);
long __stdcall MIDIDrumSetup_GetDrumAttackTime (MIDIDrumSetup* pMIDIDrumSetup, long lKey);
long __stdcall MIDIDrumSetup_GetDrumAttackTimeEx (MIDIDrumSetup* pMIDIDrumSetup, unsigned char* pBuf, long lLen);
long __stdcall MIDIDrumSetup_GetDrumDecay1Time (MIDIDrumSetup* pMIDIDrumSetup, long lKey);
long __stdcall MIDIDrumSetup_GetDrumDecay1TimeEx (MIDIDrumSetup* pMIDIDrumSetup, unsigned char* pBuf, long lLen);
long __stdcall MIDIDrumSetup_GetDrumDecay2Time (MIDIDrumSetup* pMIDIDrumSetup, long lKey);
long __stdcall MIDIDrumSetup_GetDrumDecay2TimeEx (MIDIDrumSetup* pMIDIDrumSetup, unsigned char* pBuf, long lLen);
long __stdcall MIDIDrumSetup_GetDrumPitchCoarse (MIDIDrumSetup* pMIDIDrumSetup, long lKey);
long __stdcall MIDIDrumSetup_GetDrumPitchCoarseEx (MIDIDrumSetup* pMIDIDrumSetup, unsigned char* pBuf, long lLen);
long __stdcall MIDIDrumSetup_GetDrumPitchFine (MIDIDrumSetup* pMIDIDrumSetup, long lKey);
long __stdcall MIDIDrumSetup_GetDrumPitchFineEx (MIDIDrumSetup* pMIDIDrumSetup, unsigned char* pBuf, long lLen);
long __stdcall MIDIDrumSetup_GetDrumVolume (MIDIDrumSetup* pMIDIDrumSetup, long lKey);
long __stdcall MIDIDrumSetup_GetDrumVolumeEx (MIDIDrumSetup* pMIDIDrumSetup, unsigned char* pBuf, long lLen);
long __stdcall MIDIDrumSetup_GetDrumPan (MIDIDrumSetup* pMIDIDrumSetup, long lKey);
long __stdcall MIDIDrumSetup_GetDrumPanEx (MIDIDrumSetup* pMIDIDrumSetup, unsigned char* pBuf, long lLen);
long __stdcall MIDIDrumSetup_GetDrumReverb (MIDIDrumSetup* pMIDIDrumSetup, long lKey);
long __stdcall MIDIDrumSetup_GetDrumReverbEx (MIDIDrumSetup* pMIDIDrumSetup, unsigned char* pBuf, long lLen);
long __stdcall MIDIDrumSetup_GetDrumChorus (MIDIDrumSetup* pMIDIDrumSetup, long lKey);
long __stdcall MIDIDrumSetup_GetDrumChorusEx (MIDIDrumSetup* pMIDIDrumSetup, unsigned char* pBuf, long lLen);
long __stdcall MIDIDrumSetup_GetDrumDelay (MIDIDrumSetup* pMIDIDrumSetup, long lKey);
long __stdcall MIDIDrumSetup_GetDrumDelayEx (MIDIDrumSetup* pMIDIDrumSetup, unsigned char* pBuf, long lLen);
long __stdcall MIDIDrumSetup_SetDrumCutoffFrequency (MIDIDrumSetup* pMIDIDrumSetup, long lKey, long lVal);
long __stdcall MIDIDrumSetup_SetDrumResonance (MIDIDrumSetup* pMIDIDrumSetup, long lKey, long lVal);
long __stdcall MIDIDrumSetup_SetDrumAttackTime (MIDIDrumSetup* pMIDIDrumSetup, long lKey, long lVal);
long __stdcall MIDIDrumSetup_SetDrumDecay1Time (MIDIDrumSetup* pMIDIDrumSetup, long lKey, long lVal);
long __stdcall MIDIDrumSetup_SetDrumDecay2Time (MIDIDrumSetup* pMIDIDrumSetup, long lKey, long lVal);
long __stdcall MIDIDrumSetup_SetDrumPitchCoarse (MIDIDrumSetup* pMIDIDrumSetup, long lKey, long lVal);
long __stdcall MIDIDrumSetup_SetDrumPitchFine (MIDIDrumSetup* pMIDIDrumSetup, long lKey, long lVal);
long __stdcall MIDIDrumSetup_SetDrumVolume (MIDIDrumSetup* pMIDIDrumSetup, long lKey, long lVal);
long __stdcall MIDIDrumSetup_SetDrumPan (MIDIDrumSetup* pMIDIDrumSetup, long lKey, long lVal);
long __stdcall MIDIDrumSetup_SetDrumReverb (MIDIDrumSetup* pMIDIDrumSetup, long lKey, long lVal);
long __stdcall MIDIDrumSetup_SetDrumChorus (MIDIDrumSetup* pMIDIDrumSetup, long lKey, long lVal);
long __stdcall MIDIDrumSetup_SetDrumDelay (MIDIDrumSetup* pMIDIDrumSetup, long lKey, long lVal);
long __stdcall MIDIDrumSetup_Write (MIDIDrumSetup* pMIDIDrumSetup, FILE* pFile, long lVersion);
long __stdcall MIDIDrumSetup_Read (MIDIDrumSetup* pMIDIDrumSetup, FILE* pFile, long lVersion);
void __stdcall MIDIStatus_Delete (MIDIStatus* pMIDIStatus);
MIDIStatus* __stdcall MIDIStatus_Create (long lModuleMode, long lNumMIDIPart, long lNumMIDIDrumSetup);
long __stdcall MIDIStatus_GetModuleMode (MIDIStatus* pMIDIStatus);
long __stdcall MIDIStatus_GetMasterFineTuning (MIDIStatus* pMIDIStatus);
long __stdcall MIDIStatus_GetMasterCoarseTuning (MIDIStatus* pMIDIStatus);
long __stdcall MIDIStatus_GetMasterVolume (MIDIStatus* pMIDIStatus);
long __stdcall MIDIStatus_GetMasterPan (MIDIStatus* pMIDIStatus);
long __stdcall MIDIStatus_GetMasterReverb (MIDIStatus* pMIDIStatus, long lNum);
long __stdcall MIDIStatus_GetMasterReverbEx (MIDIStatus* pMIDIStatus, long* pBuf, long lLen);
long __stdcall MIDIStatus_GetMasterChorus (MIDIStatus* pMIDIStatus, long lNum);
long __stdcall MIDIStatus_GetMasterChorusEx (MIDIStatus* pMIDIStatus, long* pBuf, long lLen);
long __stdcall MIDIStatus_GetMasterDelay (MIDIStatus* pMIDIStatus, long lNum);
long __stdcall MIDIStatus_GetMasterDelayEx (MIDIStatus* pMIDIStatus, long* pBuf, long lLen);
long __stdcall MIDIStatus_GetMasterEqualizer (MIDIStatus* pMIDIStatus, long lNum);
long __stdcall MIDIStatus_GetMasterEqualizerEx (MIDIStatus* pMIDIStatus, long* pBuf, long lLen);
long __stdcall MIDIStatus_GetNumMIDIPart (MIDIStatus* pMIDIStatus);
long __stdcall MIDIStatus_GetNumMIDIDrumSetup (MIDIStatus* pMIDIStatus);
MIDIPart* __stdcall MIDIStatus_GetMIDIPart (MIDIStatus* pMIDIStatus, long lIndex);
MIDIDrumSetup* __stdcall MIDIStatus_GetMIDIDrumSetup (MIDIStatus* pMIDIStatus, long lIndex);
long __stdcall MIDIStatus_SetModuleMode (MIDIStatus* pMIDIStatus, long lModuleMode);
long __stdcall MIDIStatus_SetMasterFineTuning (MIDIStatus* pMIDIStatus, long lMasterFineTuning);
long __stdcall MIDIStatus_SetMasterCoarseTuning (MIDIStatus* pMIDIStatus, long lMasterCoarseTuning);
long __stdcall MIDIStatus_SetMasterVolume (MIDIStatus* pMIDIStatus, long lMasterVolume);
long __stdcall MIDIStatus_SetMasterPan (MIDIStatus* pMIDIStatus, long lMasterPan);
long __stdcall MIDIStatus_SetMasterReverb (MIDIStatus* pMIDIStatus, long lNum, long lVal);
long __stdcall MIDIStatus_SetMasterReverbType (MIDIStatus* pMIDIStatus, long lMasterReverbType);
long __stdcall MIDIStatus_SetMasterChorus (MIDIStatus* pMIDIStatus, long lNum, long lVal);
long __stdcall MIDIStatus_SetMasterChorusType (MIDIStatus* pMIDIStatus, long lMasterChorusType);
long __stdcall MIDIStatus_SetMasterDelay (MIDIStatus* pMIDIStatus, long lNum, long lVal);
long __stdcall MIDIStatus_SetMasterDelayType (MIDIStatus* pMIDIStatus, long lMasterDelayType);
long __stdcall MIDIStatus_SetMasterEqualizer (MIDIStatus* pMIDIStatus, long lNum, long lVal);
long __stdcall MIDIStatus_SetMasterEqualizerType (MIDIStatus* pMIDIStatus, long lMasterEqualizerType);