MIDIStatus/MIDIStatus.bas


' 現在の楽器ごとのレゾナンスの値を取得
Declare Function MIDIDrumSetup_GetDrumResonance Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long) As Long

' 現在の楽器ごとのレゾナンスの値をまとめて取得
Declare Function MIDIDrumSetup_GetDrumResonanceEx Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByRef pBuf As Byte, ByVal lLen As Long) As Long

' 現在の楽器ごとのアタックタイムの値を取得
Declare Function MIDIDrumSetup_GetDrumAttackTime Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long) As Long

' 現在の楽器ごとのアタックタイムの値をまとめて取得
Declare Function MIDIDrumSetup_GetDrumAttackTimeEx Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByRef pBuf As Byte, ByVal lLen As Long) As Long

' 現在の楽器ごとのディケイタイム1の値を取得
Declare Function MIDIDrumSetup_GetDrumDecay1Time Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long) As Long

' 現在の楽器ごとのディケイタイム1の値をまとめて取得
Declare Function MIDIDrumSetup_GetDrumDecay1TimeEx Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByRef pBuf As Byte, ByVal lLen As Long) As Long

' 現在の楽器ごとのディケイタイム2の値を取得
Declare Function MIDIDrumSetup_GetDrumDecay2Time Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long) As Long

' 現在の楽器ごとのディケイタイム2の値をまとめて取得
Declare Function MIDIDrumSetup_GetDrumDecay2TimeEx Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByRef pBuf As Byte, ByVal lLen As Long) As Long

' 現在の楽器ごとのピッチコースの値を取得
Declare Function MIDIDrumSetup_GetDrumPitchCoarse Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long) As Long

' 現在の楽器ごとのピッチコースの値をまとめて取得
Declare Function MIDIDrumSetup_GetDrumPitchCoarseEx Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByRef pBuf As Byte, ByVal lLen As Long) As Long

' 現在の楽器ごとのピッチファインの値を取得
Declare Function MIDIDrumSetup_GetDrumPitchFine Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long) As Long

' 現在の楽器ごとのピッチファインの値をまとめて取得
Declare Function MIDIDrumSetup_GetDrumPitchFineEx Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByRef pBuf As Byte, ByVal lLen As Long) As Long

' 現在の楽器ごとのボリュームの値を取得
Declare Function MIDIDrumSetup_GetDrumVolume Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long) As Long

' 現在の楽器ごとのボリュームの値をまとめて取得
Declare Function MIDIDrumSetup_GetDrumVolumeEx Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByRef pBuf As Byte, ByVal lLen As Long) As Long

' 現在の楽器ごとのパンの値を取得
Declare Function MIDIDrumSetup_GetDrumPan Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long) As Long

' 現在の楽器ごとのパンの値をまとめて取得
Declare Function MIDIDrumSetup_GetDrumPanEx Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByRef pBuf As Byte, ByVal lLen As Long) As Long

' 現在の楽器ごとのリバーブの値を取得
Declare Function MIDIDrumSetup_GetDrumReverb Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long) As Long

' 現在の楽器ごとのリバーブの値をまとめて取得
Declare Function MIDIDrumSetup_GetDrumReverbEx Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByRef pBuf As Byte, ByVal lLen As Long) As Long

' 現在の楽器ごとのコーラスの値を取得
Declare Function MIDIDrumSetup_GetDrumChorus Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long) As Long

' 現在の楽器ごとのコーラスの値をまとめて取得
Declare Function MIDIDrumSetup_GetDrumChorusEx Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByRef pBuf As Byte, ByVal lLen As Long) As Long

' 現在の楽器ごとのディレイの値を取得(XGではディレイはヴァリエーションと読み替える)
Declare Function MIDIDrumSetup_GetDrumDelay Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long) As Long

' 現在の楽器ごとのディレイの値をまとめて取得(XGではディレイはヴァリエーションと読み替える)
Declare Function MIDIDrumSetup_GetDrumDelayEx Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByRef pBuf As Byte, ByVal lLen As Long) As Long

' MIDIDrumSetup_Set系関数

' 現在の楽器ごとのカットオフフリーケンシーの値を設定
Declare Function MIDIDrumSetup_SetDrumCutoffFrequency Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long, ByVal lVal As Long) As Long

' 現在の楽器ごとのレゾナンスの値を設定
Declare Function MIDIDrumSetup_SetDrumResonance Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long, ByVal lVal As Long) As Long

' 現在の楽器ごとのアタックタイムの値を設定
Declare Function MIDIDrumSetup_SetDrumAttackTime Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long, ByVal lVal As Long) As Long

' 現在の楽器ごとのディケイタイム1の値を設定
Declare Function MIDIDrumSetup_SetDrumDecay1Time Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long, ByVal lVal As Long) As Long

' 現在の楽器ごとのディケイタイム2の値を設定
Declare Function MIDIDrumSetup_SetDrumDecay2Time Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long, ByVal lVal As Long) As Long

' 現在の楽器ごとのピッチコースの値を設定
Declare Function MIDIDrumSetup_SetDrumPitchCoarse Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long, ByVal lVal As Long) As Long

' 現在の楽器ごとのピッチファインの値を設定
Declare Function MIDIDrumSetup_SetDrumPitchFine Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long, ByVal lVal As Long) As Long

' 現在の楽器ごとのボリュームの値を設定
Declare Function MIDIDrumSetup_SetDrumVolume Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long, ByVal lVal As Long) As Long

' 現在の楽器ごとのパンの値を設定
Declare Function MIDIDrumSetup_SetDrumPan Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long, ByVal lVal As Long) As Long

' 現在の楽器ごとのリバーブの値を設定
Declare Function MIDIDrumSetup_SetDrumReverb Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long, ByVal lVal As Long) As Long

' 現在の楽器ごとのコーラスの値を設定
Declare Function MIDIDrumSetup_SetDrumChorus Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long, ByVal lVal As Long) As Long

' 現在の楽器ごとのディレイの値を設定(XGではディレイはヴァリエーションと読み替える)
Declare Function MIDIDrumSetup_SetDrumDelay Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal lKey As Long, ByVal lVal As Long) As Long


' MIDIDrumSetupの書き込み(外部隠蔽、この関数はMIDIStatus_Writeから呼び出される)
Declare Function MIDIDrumSetup_Write Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal pFile As Long, ByVal lVersion As Long) As Long

' MIDIDrumSetupの読み込み(外部隠蔽、この関数はMIDIStatus_Readから呼び出される)
Declare Function MIDIDrumSetup_Read Lib "MIDIStatus.dll" _
    (ByVal pMIDIDrumSetup As Long, ByVal pFile As Long, ByVal lVersion As Long) As Long



'******************************************************************************
'*                                                                            *
'* MIDIStatus関数群                                                           *
'*                                                                            *
'******************************************************************************

' MIDIStatusオブジェクトを削除する。
Declare Sub MIDIStatus_Delete Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long)

' MIDIStatusオブジェクトを生成する。
Declare Function MIDIStatus_Create Lib "MIDIStatus.dll" _
    (ByVal lModuleMode As Long, ByVal lNumMIDIPart As Long, ByVal lNumMIDIDrumSetup As Long) As Long

' MIDIStatus_Get系関数

' 現在のモジュールモード(NATIVE/GM/GM2/GS/88/XG)を取得
Declare Function MIDIStatus_GetModuleMode Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long) As Long

' 現在のマスターチューンの値を取得
Declare Function MIDIStatus_GetMasterFineTuning Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long) As Long

' 現在のマスターキーシフトの値を取得
Declare Function MIDIStatus_GetMasterCoarseTuning Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long) As Long

' 現在のマスターボリュームの値を取得
Declare Function MIDIStatus_GetMasterVolume Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long) As Long

' 現在のマスターパンの値を取得
Declare Function MIDIStatus_GetMasterPan Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long) As Long

' 現在のマスターリバーブの値を1つ取得
Declare Function MIDIStatus_GetMasterReverb Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal lNum As Long) As Long

' 現在のマスターリバーブの値をまとめて取得
Declare Function MIDIStatus_GetMasterReverbEx Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByRef pBuf As Long, ByVal lLen As Long) As Long

' 現在のマスターコーラスの値を1つ取得
Declare Function MIDIStatus_GetMasterChorus Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal lNum As Long) As Long

' 現在のマスターコーラスの値をまとめて取得
Declare Function MIDIStatus_GetMasterChorusEx Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByRef pBuf As Long, ByVal lLen As Long) As Long

' 現在のマスターディレイの値を1つ取得(XGではディレイはヴァリエーションと読み替える)
Declare Function MIDIStatus_GetMasterDelay Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal lNum As Long) As Long

' 現在のマスターディレイの値をまとめて取得(XGではディレイはヴァリエーションと読み替える)
Declare Function MIDIStatus_GetMasterDelayEx Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByRef pBuf As Long, ByVal lLen As Long) As Long

' 現在のマスターイコライザの値を1つ取得
Declare Function MIDIStatus_GetMasterEqualizer Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal lNum As Long) As Long

' 現在のマスターイコライザの値をまとめて取得
Declare Function MIDIStatus_GetMasterEqualizerEx Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByRef pBuf As Long, ByVal lLen As Long) As Long

' このMIDIStatusオブジェクトに含まれるMIDIPartの数を取得
Declare Function MIDIStatus_GetNumMIDIPart Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long) As Long

' このMIDIStatusオブジェクトに含まれるMIDIDrumSetupの数を取得
Declare Function MIDIStatus_GetNumMIDIDrumSetup Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long) As Long

' 各MIDIPartへのポインタを取得
Declare Function MIDIStatus_GetMIDIPart Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal lIndex) As Long

' 各MIDIDrumSetupへのポインタを取得
Declare Function MIDIStatus_GetMIDIDrumSetup Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal lIndex) As Long

' MIDIStatus_Set系関数

' モジュールモード(NATIVE/GM/GM2/GS/88/XG)を設定する。
' モジュールモードの設定に従いすべてのパラメータをデフォルト値に設定する。
Declare Function MIDIStatus_SetModuleMode Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal lModuleMode As Long) As Long

' 現在のマスターファインチューニングの値を設定
Declare Function MIDIStatus_SetMasterFineTuning Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal lMasterFineTuning As Long) As Long

' 現在のマスターコースチューニングの値を設定
Declare Function MIDIStatus_SetMasterCoarseTuning Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal lMasterCoarseTuning As Long) As Long

' 現在のマスターボリュームの値を設定
Declare Function MIDIStatus_SetMasterVolume Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal lMasterVolume As Long) As Long

' 現在のマスターパンの値を設定
Declare Function MIDIStatus_SetMasterPan Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal lMasterPan As Long) As Long

' 現在のマスターリバーブの値を1つ設定
Declare Function MIDIStatus_SetMasterReverb Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal lNum As Long, ByVal lVal As Long) As Long

' マスターリバーブのタイプを設定し、それに伴い各パラメータもデフォルト値に設定する。
Declare Function MIDIStatus_SetMasterReverbType Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal lMasterReverbType As Long) As Long

' 現在のマスターコーラスの値を1つ設定
Declare Function MIDIStatus_SetMasterChorus Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal lNum, ByVal lVal) As Long

' マスターコーラスのタイプを設定し、それに伴い各パラメータもデフォルト値に設定する。
Declare Function MIDIStatus_SetMasterChorusType Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal lMasterChorusType As Long) As Long

' 現在のマスターディレイの値を1つ設定(XGではディレイはヴァリエーションと読み替える)
Declare Function MIDIStatus_SetMasterDelay Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal lNum As Long, ByVal lVal As Long) As Long

' マスターディレイのタイプを設定し、それに伴い各パラメータもデフォルト値に設定する。
' (XGではマスターヴァリエーションとなる)
Declare Function MIDIStatus_SetMasterDelayType Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal lMasterDelayType As Long) As Long

' 現在のマスターイコライザの値を1つ設定
Declare Function MIDIStatus_SetMasterEqualizer Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal lNum As Long, ByVal lVal As Long) As Long

' マスターイコライザのタイプを設定し、それに伴い各パラメータもデフォルト値に設定する。
Declare Function MIDIStatus_SetMasterEqualizerType Lib "MIDIStatus.dll" _
    (ByVal pMIDIStatus As Long, ByVal lMasterEqualizerType As Long) As Long
